src/objects/Survey_Question__c.object
<CustomObject>
    <description>Template for a survey question. When a survey response is created, the associated questions are copied to question responses.</description>
    <fields>
        <fullName>Help_Text__c</fullName>
        <description>Help information - accessible from the question response.</description>
        <label>Help Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Index__c</fullName>
        <label>Index</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Option_10__c</fullName>
        <description>The tenth option for a picklist/radio buttons.</description>
        <label>Option 10</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Option_1__c</fullName>
        <description>The first option for a picklist/radio buttons.</description>
        <label>Option 1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Option_2__c</fullName>
        <description>The second option for a picklist/radio buttons.</description>
        <label>Option 2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_Text__c</fullName>
        <label>Question Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Question_Type__c</fullName>
        <label>Question Type</label>
        <picklist>
            <picklistValues>
                <fullName>Text Area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Checkbox</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Picklist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio Buttons</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MultiCheckbox</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Survey__c</fullName>
        <label>Survey</label>
        <referenceTo>Survey__c</referenceTo>
        <relationshipLabel>Survey Questions</relationshipLabel>
        <relationshipName>Survey_Questions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Survey Question</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SQ-{0000}</displayFormat>
        <label>Survey Question Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>